--- a/index.html
+++ b/index.html
@@ -4,35 +4,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebXR AR Test</title>
+    <title>WebXR AR + Three.js</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 </head>
 
 <body>
     <button id="start-ar">Start AR</button>
     <script>
+        let session, renderer, scene, camera;
+
         document.getElementById("start-ar").addEventListener("click", async () => {
             if (!navigator.xr) {
-                alert("WebXR не поддерживается в этом браузере!");
+                alert("WebXR не поддерживается!");
                 return;
             }
 
             const supported = await navigator.xr.isSessionSupported("immersive-ar");
             if (!supported) {
-                alert("Ваше устройство не поддерживает AR-сессии!");
+                alert("AR-сессии не поддерживаются!");
                 return;
             }
 
             try {
-                const session = await navigator.xr.requestSession("immersive-ar", {
-                    requiredFeatures: ["hit-test", "dom-overlay"],
-                    domOverlay: { root: document.body }
+                session = await navigator.xr.requestSession("immersive-ar", {
+                    requiredFeatures: ["local"]
                 });
 
-                console.log("🎉 AR-сессия запущена!", session);
+                setupThreeJS();
+                session.requestAnimationFrame(onXRFrame);
             } catch (error) {
                 console.error("Ошибка запуска WebXR:", error);
             }
         });
+
+        function setupThreeJS() {
+            // Создаём сцену
+            scene = new THREE.Scene();
+
+            // Настраиваем рендерер
+            renderer = new THREE.WebGLRenderer({ alpha: true });
+            renderer.xr.enabled = true;
+            document.body.appendChild(renderer.domElement);
+
+            // Создаём камеру
+            camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+            scene.add(camera);
+
+            // Добавляем куб
+            const geometry = new THREE.BoxGeometry(0.2, 0.2, 0.2);
+            const material = new THREE.MeshBasicMaterial({ color: 0xff0000 });
+            const cube = new THREE.Mesh(geometry, material);
+            cube.position.set(0, 0, -1); // 1 метр впереди
+            scene.add(cube);
+        }
+
+        function onXRFrame(time, frame) {
+            session.requestAnimationFrame(onXRFrame);
+            renderer.render(scene, camera);
+        }
     </script>
 </body>
 
