--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-    <title>AR.js Летающий объект</title>
+    <title>AR.js Летающая Модель</title>
   </head>
   <body style="margin: 0px; overflow: hidden">
     <a-scene embedded arjs>
@@ -16,7 +16,6 @@
           rotation="270 0 0"
           scale="0.01 0.01 0.01"
           gltf-model="Frozy_Frost.glb"
-          animation="property: position; from: 1.5 0 0; to: 1.5 0.5 0; dir: alternate; dur: 1000; loop: true; easing: easeInOutSine"
         >
         </a-entity>
       </a-marker>
@@ -30,15 +29,20 @@
 
         marker.addEventListener("markerFound", () => {
           console.log("Маркер найден!");
+
+          // Добавляем анимацию полета вверх-вниз
           model.setAttribute(
             "animation",
-            "property: position; from: 1.5 0 0; to: 1.5 0.5 0; dir: alternate; dur: 1000; loop: true; easing: easeInOutSine"
+            "property: position; from: 0 0 0; to: 0 0.3 0; dir: alternate; dur: 1000; loop: true; easing: easeInOutSine"
           );
         });
 
         marker.addEventListener("markerLost", () => {
           console.log("Маркер потерян!");
-          model.removeAttribute("animation"); // Останавливает анимацию
+
+          // Останавливаем анимацию, сбрасываем позицию
+          model.removeAttribute("animation");
+          model.setAttribute("position", "0 0 0");
         });
       });
     </script>
