--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <title>AR.js Летающая Модель</title>
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
+    />
   </head>
   <body style="margin: 0px; overflow: hidden">
     <a-scene embedded arjs="sourceType: webcam;">
