--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-    <title>AR.js Летающая Модель</title>
     <meta
       name="viewport"
       content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
+    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <title>AR.js Летающая Модель</title>
   </head>
   <body style="margin: 0px; overflow: hidden">
-    <a-scene embedded arjs="sourceType: webcam;">
+    <a-scene
+      embedded
+      arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false;"
+      vr-mode-ui="enabled: false"
+      renderer="logarithmicDepthBuffer: true;"
+    >
       <a-marker preset="hiro" id="marker">
         <a-entity
           id="model"
@@ -23,6 +27,7 @@
         >
         </a-entity>
       </a-marker>
+
       <a-entity camera></a-entity>
     </a-scene>
 
@@ -32,21 +37,25 @@
         let model = document.querySelector("#model");
 
         marker.addEventListener("markerFound", () => {
-          console.log("Маркер найден!");
+          console.log("✅ Маркер найден!");
 
-          // Добавляем анимацию полета вверх-вниз
-          model.setAttribute(
-            "animation",
-            "property: position; from: 0 0 0; to: 0 0.3 0; dir: alternate; dur: 1000; loop: true; easing: easeInOutSine"
-          );
+          // Проверяем, есть ли уже анимация, чтобы не дублировать
+          if (!model.hasAttribute("animation")) {
+            model.setAttribute(
+              "animation",
+              "property: position; from: 0 0 0; to: 0 0.3 0; dir: alternate; dur: 1000; loop: true; easing: easeInOutSine"
+            );
+          }
         });
 
         marker.addEventListener("markerLost", () => {
-          console.log("Маркер потерян!");
+          console.log("❌ Маркер потерян!");
 
-          // Останавливаем анимацию, сбрасываем позицию
-          model.removeAttribute("animation");
-          model.setAttribute("position", "0 0 0");
+          // Удаляем анимацию только если маркер потерян
+          if (model.hasAttribute("animation")) {
+            model.removeAttribute("animation");
+            model.setAttribute("position", "0 0 0");
+          }
         });
       });
     </script>
