--- a/index.html
+++ b/index.html
@@ -2,52 +2,50 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no,"
-    />
-    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-    <title>AR.js Летающая Модель</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>AR 3D Model Viewer</title>
+    <script
+      type="module"
+      src="https://unpkg.com/@google/model-viewer@latest/dist/model-viewer.min.js"
+    ></script>
+    <style>
+      body {
+        text-align: center;
+      }
+      model-viewer {
+        width: 100%;
+        height: 500px;
+      }
+    </style>
   </head>
-  <body style="margin: 0px; overflow: hidden">
-    <a-scene embedded arjs>
-      <a-marker preset="hiro" id="marker">
-        <a-entity
-          id="model"
-          position="0 0 0"
-          rotation="270 0 0"
-          scale="0.01 0.01 0.01"
-          gltf-model="Frozy_Frost.glb"
-        >
-        </a-entity>
-      </a-marker>
-      <a-entity camera></a-entity>
-    </a-scene>
+  <body>
+    <model-viewer
+      camera-controls="false"
+      scale="0.03 0.03 0.03"
+      id="astronaut"
+      src="Frozy_Frost.glb"
+      ar
+      ar-modes="webxr scene-viewer quick-look"
+      alt="A 3D model of an astronaut"
+      shadow-intensity="2"
+      xr-environment
+    >
+    </model-viewer>
+
+    <button onclick="startAR()">Запустить AR</button>
 
     <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        let marker = document.querySelector("#marker");
-        let model = document.querySelector("#model");
+      function startAR() {
+        const modelViewer = document.getElementById("astronaut");
+        modelViewer.activateAR();
 
-        marker.addEventListener("markerFound", () => {
-          console.log("Маркер найден!");
+        // const modelViewerTransform = document.querySelector(
+        //   "model-viewer#transform"
+        // );
+        // modelViewerTransform.scale = `0.2 0.2 `;
+      }
 
-          // Добавляем анимацию полета вверх-вниз
-          model.setAttribute(
-            "animation",
-            "property: position; from: 0 0 0; to: 0 0.3 0; dir: alternate; dur: 1000; loop: true; easing: easeInOutSine"
-          );
-        });
-
-        marker.addEventListener("markerLost", () => {
-          console.log("Маркер потерян!");
-
-          // Останавливаем анимацию, сбрасываем позицию
-          model.removeAttribute("animation");
-          model.setAttribute("position", "0 0 0");
-        });
-      });
+      // Движение вверх-вниз
     </script>
   </body>
 </html>
