--- a/index.html
+++ b/index.html
@@ -2,50 +2,135 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AR 3D Model Viewer</title>
-    <script
-      type="module"
-      src="https://unpkg.com/@google/model-viewer@latest/dist/model-viewer.min.js"
-    ></script>
-    <style>
-      body {
-        text-align: center;
-      }
-      model-viewer {
-        width: 100%;
-        height: 500px;
-      }
-    </style>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no,"
+    />
+    <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <title>AR.js Летающая Модель</title>
   </head>
-  <body>
-    <model-viewer
-      camera-controls="false"
-      scale="0.03 0.03 0.03"
-      id="astronaut"
-      src="Frozy_Frost.glb"
-      ar
-      ar-modes="webxr scene-viewer quick-look"
-      alt="A 3D model of an astronaut"
-      shadow-intensity="2"
-      xr-environment
-    >
-    </model-viewer>
+  <body style="margin: 0px; overflow: hidden">
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.min.js"></script>
+    <script src="https://rawgit.com/donmccurdy/aframe-animation-mixer/master/dist/aframe-animation-mixer.min.js"></script>
+    <script>
+      AFRAME.registerComponent("animate-mouth", {
+        init: function () {
+          let el = this.el;
+          el.addEventListener("click", function () {
+            el.setAttribute("animation", {
+              property: "position",
+              to: "0 0.1 0",
+              dur: 500,
+              dir: "alternate",
+              loop: true,
+              easing: "easeInOutQuad",
+            });
+          });
+        },
+      });
+    </script>
 
-    <button onclick="startAR()">Запустить AR</button>
+    <a-scene embedded arjs>
+      <a-marker preset="hiro" id="marker">
+        <!-- Full Model -->
+        <a-entity
+          id="model"
+          gltf-model="Frozy_Frost.glb"
+          position="0 0 0"
+          rotation="270 0 0"
+          scale="0.01 0.01 0.01"
+        >
+        </a-entity>
+
+        <!-- Animate Teeth -->
+        <a-entity
+          gltf-model="Frozy_Frost.glb#Teeth_low"
+          position="0 0.2 0"
+          scale="0.01 0.01 0.01"
+          animation="property: position; to: 0 0.3 0; dur: 1000; loop: true; direction: alternate"
+        ></a-entity>
+
+        <!-- Animate Tongue -->
+        <a-entity
+          gltf-model="Frozy_Frost.glb#Tongue_low"
+          position="0 0 0"
+          scale="0.01 0.01 0.01"
+          animation="property: rotation; to: 0 30 0; dur: 800; loop: true; direction: alternate"
+        ></a-entity>
+      </a-marker>
+
+      <a-entity camera></a-entity>
+    </a-scene>
 
     <script>
-      function startAR() {
-        const modelViewer = document.getElementById("astronaut");
-        modelViewer.activateAR();
+      document.addEventListener("DOMContentLoaded", () => {
+        let marker = document.querySelector("#marker");
+        let model = document.querySelector("#model");
 
-        // const modelViewerTransform = document.querySelector(
-        //   "model-viewer#transform"
-        // );
-        // modelViewerTransform.scale = `0.2 0.2 `;
-      }
+        const speakBtn = document.getElementById("speakBtn");
 
-      // Движение вверх-вниз
+        marker.addEventListener("markerFound", () => {
+          console.log("Маркер найден!");
+
+          // Добавляем анимацию полета вверх-вниз
+          model.setAttribute(
+            "animation",
+            "property: position; from: 0 0 0; to: 0 0.3 0; dir: alternate; dur: 1000; loop: true; easing: easeInOutSine"
+          );
+        });
+
+        marker.addEventListener("markerLost", () => {
+          console.log("Маркер потерян!");
+
+          // Останавливаем анимацию, сбрасываем позицию
+          model.removeAttribute("animation");
+          model.setAttribute("position", "0 0 0");
+        });
+
+        const synth = window.speechSynthesis;
+        const utterance = new SpeechSynthesisUtterance(
+          "Hi I am from Japan. Can I follow you friend"
+        );
+
+        // 📢 Функция запуска TTS
+        function speakText() {
+          if (synth.speaking) return;
+
+          // Запускаем синхронизацию губ
+          utterance.onstart = () => startLipAnimation();
+          utterance.onend = () => stopLipAnimation();
+
+          // Запускаем озвучку
+          synth.speak(utterance);
+        }
+
+        // 🗣️ Анимация губ
+        function startLipAnimation() {
+          // Анимируем зубы вверх-вниз
+          document
+            .querySelector("#teeth")
+            .setAttribute(
+              "animation",
+              "property: position; from: 0 0 0; to: 0 -0.02 0; dir: alternate; dur: 100; loop: true;"
+            );
+          // Анимируем язык вверх-вниз
+          document
+            .querySelector("#tongue")
+            .setAttribute(
+              "animation",
+              "property: position; from: 0 0 0; to: 0 0.01 0; dir: alternate; dur: 100; loop: true;"
+            );
+        }
+
+        function stopLipAnimation() {
+          document.querySelector("#teeth").removeAttribute("animation");
+          document.querySelector("#tongue").removeAttribute("animation");
+        }
+        // 📌 Нажатие на кнопку запускает речь
+        speakBtn.addEventListener("click", speakText);
+      });
     </script>
   </body>
 </html>
